--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmes Similares a Gravidade</title>
+    <title>Gravidade - Referências</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -214,8 +214,8 @@
         
         <h3>Links Relacionados</h3>
         <ul>
-            <li><a href="https://lucasfarias072.github.io/mock-web-page-gravidade-referencias/">referenciar a mim</a></li>
-            <li><a href="https://lucasfarias072.github.io/mock-web-page-gravidade-rank-2013/">rank dos filmes de 2013</a></li>
+            <li><a href="https://lucasfarias072.github.io/mock-web-page-gravidade-avaliacao/">avaliacao</a></li>
+            <li><a href="https://lucasfarias072.github.io/mock-web-page-gravidade-rank-2013/">rank-2013</a></li>
         </ul>
     </div>
     <footer>
